--- a/checkin-終版-F-複製-test.html
+++ b/checkin-終版-F-複製-test.html
@@ -101,7 +101,7 @@ footer { text-align:center; color:#555; background: rgba(255,255,255,0.1); paddi
         <li class="nav-item"><a class="nav-link" href="index.html">首頁</a></li>
         <li class="nav-item"><a class="nav-link" href="schedule.html">活動流程</a></li>
       <li class="nav-item"><a class="nav-link" href="register.html">報名名單</a></li>
-            <li class="nav-item"><a class="nav-link nav-link-arrow" href="checkin-終版-F-複製-test.html">簽到入場</a></li>
+            <li class="nav-item"><a class="nav-link nav-link-arrow active" href="checkin-終版-F-複製-test.html">簽到入場</a></li>
             <li class="nav-item"><a class="nav-link" href="honors.html">優良暨傑出教師芳名錄</a></li>
             <li class="nav-item"><a class="nav-link" href="https://forms.gle/DBdC3ZScynWDzEps5" target="_blank">滿意度回饋</a></li>
       </ul>
@@ -334,6 +334,7 @@ fetchCheckinData();
 
 </body>
 </html>
+
 
 
 
