--- a/honors.html
+++ b/honors.html
@@ -12,7 +12,7 @@
 body {
     margin: 0;
     font-family: "Noto Sans TC", sans-serif;
-    background: radial-gradient(circle at 20% 30%, #e8fff4, #c4f5e3, #b2e8d6);
+    background: radial-gradient(circle at 20% 30%, #F2E6FF, #E6CCFF, #D9B3FF);
     overflow-x: hidden;
 }
 
@@ -26,38 +26,31 @@ body {
     display: flex;
     align-items: center;
 }
-
 .navbar-brand {
     color: #FFFFFF !important;
     font-weight: 700;
     display: flex;
     align-items: center;
 }
-
 .navbar-brand img {
     height: 34px;
     margin-right: 8px;
 }
-
-/* 這裡確保分頁靠右 */
 .navbar-collapse {
     justify-content: flex-end !important;
 }
-
 .navbar-nav .nav-link {
     color: #FFFFFF !important;
     font-weight: 600;
     padding-left: 14px !important;
     padding-right: 14px !important;
     display: flex;
-    align-items: flex-start; /* 文字微微往上 */
+    align-items: center; /* 垂直置中 */
     height: 100%;
 }
-
 .navbar-nav .nav-link:hover {
     color: #FFD700 !important;
 }
-
 .navbar-nav .nav-link.active {
     color: #FFD700 !important;
     font-weight: 700;
@@ -70,8 +63,8 @@ body {
     left: 0;
     width: 100%;
     height: 100%;
-    background: radial-gradient(circle at 30% 30%, rgba(255, 255, 255, 0.8), rgba(200, 255, 230, 0.3), transparent),
-                radial-gradient(circle at 70% 70%, rgba(200, 255, 230, 0.7), rgba(150, 230, 200, 0.2), transparent);
+    background: radial-gradient(circle at 30% 30%, rgba(255, 255, 255, 0.8), rgba(220, 200, 255, 0.3), transparent),
+                radial-gradient(circle at 70% 70%, rgba(200, 180, 255, 0.7), rgba(180, 150, 255, 0.2), transparent);
     filter: blur(60px);
     animation: moveGlow 12s infinite alternate ease-in-out;
     z-index: -1;
@@ -85,12 +78,10 @@ header {
     text-align: center;
     padding: 90px 20px 30px;
 }
-
 header img {
     width: 180px;
     margin-bottom: 20px;
 }
-
 h1 {
     font-size: 28px;
     color: #055a47;
@@ -105,29 +96,30 @@ h1 {
 }
 
 .card {
-    background: rgba(255, 255, 255, 0.8);
+    background: rgba(255, 255, 255, 0.85);
     border-radius: 14px;
     padding: 20px;
     margin-bottom: 30px;
     box-shadow: 0 4px 18px rgba(0, 0, 0, 0.08);
     backdrop-filter: blur(10px);
 }
-
 .card h2 {
     margin-top: 0;
     font-size: 22px;
     color: #0d7058;
 }
 
+/* PDF iframe 高度自適應 */
 iframe {
     width: 100%;
-    height: 820px;
+    height: calc(100vh - 200px); /* 減去 navbar + header 高度 */
     border: none;
     border-radius: 12px;
 }
-
 @media (max-width: 768px) {
-    iframe { height: 600px; }
+    iframe {
+        height: calc(100vh - 180px);
+    }
     h1 { font-size: 22px; }
 }
 </style>
