--- a/honors.html
+++ b/honors.html
@@ -12,7 +12,7 @@
 body {
     margin: 0;
     font-family: "Noto Sans TC", sans-serif;
-    background: radial-gradient(circle at 20% 30%, #F2E6FF, #E6CCFF, #D9B3FF);
+    background: radial-gradient(circle at 20% 30%, #e6e0f8, #d6c4f5, #c2b2e8); /* 與紫色搭配 */
     overflow-x: hidden;
 }
 
@@ -26,31 +26,37 @@ body {
     display: flex;
     align-items: center;
 }
+
 .navbar-brand {
     color: #FFFFFF !important;
     font-weight: 700;
     display: flex;
     align-items: center;
 }
+
 .navbar-brand img {
     height: 34px;
     margin-right: 8px;
 }
+
 .navbar-collapse {
-    justify-content: flex-end !important;
+    justify-content: flex-end !important; /* 分項靠右 */
 }
+
 .navbar-nav .nav-link {
     color: #FFFFFF !important;
     font-weight: 600;
     padding-left: 14px !important;
     padding-right: 14px !important;
     display: flex;
-    align-items: center; /* 垂直置中 */
+    align-items: center; /* 文字垂直置中 */
     height: 100%;
 }
+
 .navbar-nav .nav-link:hover {
     color: #FFD700 !important;
 }
+
 .navbar-nav .nav-link.active {
     color: #FFD700 !important;
     font-weight: 700;
@@ -63,8 +69,8 @@ body {
     left: 0;
     width: 100%;
     height: 100%;
-    background: radial-gradient(circle at 30% 30%, rgba(255, 255, 255, 0.8), rgba(220, 200, 255, 0.3), transparent),
-                radial-gradient(circle at 70% 70%, rgba(200, 180, 255, 0.7), rgba(180, 150, 255, 0.2), transparent);
+    background: radial-gradient(circle at 30% 30%, rgba(255, 255, 255, 0.8), rgba(200, 255, 230, 0.3), transparent),
+                radial-gradient(circle at 70% 70%, rgba(200, 255, 230, 0.7), rgba(150, 230, 200, 0.2), transparent);
     filter: blur(60px);
     animation: moveGlow 12s infinite alternate ease-in-out;
     z-index: -1;
@@ -78,10 +84,12 @@ header {
     text-align: center;
     padding: 90px 20px 30px;
 }
+
 header img {
     width: 180px;
     margin-bottom: 20px;
 }
+
 h1 {
     font-size: 28px;
     color: #055a47;
@@ -96,29 +104,42 @@ h1 {
 }
 
 .card {
-    background: rgba(255, 255, 255, 0.85);
+    background: rgba(255, 255, 255, 0.8);
     border-radius: 14px;
     padding: 20px;
     margin-bottom: 30px;
     box-shadow: 0 4px 18px rgba(0, 0, 0, 0.08);
     backdrop-filter: blur(10px);
 }
+
 .card h2 {
     margin-top: 0;
     font-size: 22px;
     color: #0d7058;
 }
 
-/* PDF iframe 高度自適應 */
-iframe {
+/* PDF 容器 */
+.pdf-container {
     width: 100%;
-    height: calc(100vh - 200px); /* 減去 navbar + header 高度 */
-    border: none;
     border-radius: 12px;
+    overflow: auto;
+    -webkit-overflow-scrolling: touch;
+    background: #fff;
 }
+
+.pdf-container iframe {
+    width: 100%;
+    min-height: 820px;
+    border: none;
+}
+
+/* 手機版：自動全屏 PDF */
 @media (max-width: 768px) {
-    iframe {
-        height: calc(100vh - 180px);
+    .pdf-container {
+        height: calc(100vh - 200px); /* 扣掉 header 與 padding */
+    }
+    .pdf-container iframe {
+        height: 100%;
     }
     h1 { font-size: 22px; }
 }
@@ -158,11 +179,15 @@ iframe {
 <div class="container">
     <div class="card">
         <h2>📘 優良教師</h2>
-        <iframe src="114good.pdf"></iframe>
+        <div class="pdf-container">
+            <iframe src="114good.pdf"></iframe>
+        </div>
     </div>
     <div class="card">
         <h2>🏅 傑出教師</h2>
-        <iframe src="114excellent.pdf"></iframe>
+        <div class="pdf-container">
+            <iframe src="114excellent.pdf"></iframe>
+        </div>
     </div>
 </div>
 
