--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="zh-Hant">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <title>佳里奇美醫院 114年度 主治醫師暨臨床教師餐敘</title>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@400;600;700&display=swap" rel="stylesheet">
@@ -37,15 +37,15 @@ body {
 .navbar-nav .nav-link:hover { transform: scale(1.2); }
 .navbar-nav .nav-link.active { color: #FFD700 !important; }
 
-/* ⭐ 紅色閃爍箭頭動畫 */
+/* 紅色閃爍箭頭動畫 */
 .nav-link-arrow {
     position: relative;
-    padding-left: 22px; /* 電腦版箭頭靠近但不蓋字 */
+    padding-left: 22px;
 }
 .nav-link-arrow::before {
     content: "➤";
     position: absolute;
-    left: -10px; /* 電腦版微左移，避免遮字 */
+    left: -10px;
     top: 50%;
     transform: translateY(-50%);
     color: #FF3333;
@@ -67,12 +67,12 @@ body {
     .navbar-nav .nav-item { display: block; }
 
     .nav-link-arrow {
-        padding-left: 0; /* 移除額外 padding */
+        padding-left: 0;
         display: inline-block;
         position: relative;
     }
     .nav-link-arrow::before {
-        left: -22px; /* 🔹箭頭緊貼「簽」字左側 */
+        left: -22px;
         top: 50%;
         transform: translateY(-50%);
         font-size: 1.2rem;
@@ -96,7 +96,6 @@ body {
 
 .section-title { color: #6A0DAD; font-weight: 700; }
 
-/* 小日曆 icon */
 .section-title .calendar-icon { display:inline-block; width:40px; height:40px; background:#ADD8E6; color:#fff; font-weight:700; border-radius:6px; text-align:center; margin-right:10px; line-height:1; font-size:14px; padding-top:2px; vertical-align:middle; }
 .section-title .calendar-icon .month { display:block; font-size:10px; opacity:0.8; }
 .section-title .calendar-icon .day { display:block; font-size:18px; font-weight:700; line-height:18px; }
@@ -117,7 +116,6 @@ body {
         <img src="chimei-logo-green.png" alt="奇美醫院" style="height:36px; margin-right:8px;">
         佳里奇美醫院 114年度
     </a>
-
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
         <svg xmlns="http://www.w3.org/2000/svg" fill="white" stroke="white" stroke-width="1" class="bi bi-list" viewBox="0 0 16 16">
           <path fill-rule="evenodd" d="M2.5 12.5a.5.5 0 010-1h11a.5.5 0 010 1h-11zm0-4a.5.5 0 010-1h11a.5.5 0 010 1h-11zm0-4a.5.5 0 010-1h11a.5.5 0 010 1h-11z"/>
@@ -129,11 +127,7 @@ body {
             <li class="nav-item"><a class="nav-link active" href="index.html">活動資訊</a></li>
             <li class="nav-item"><a class="nav-link" href="agenda.html">活動流程</a></li>
             <li class="nav-item"><a class="nav-link" href="register.html">報名名單</a></li>
-
-            <li class="nav-item">
-                <a class="nav-link nav-link-arrow" href="checkin-終版-F-複製-test.html">簽到入場</a>
-            </li>
-
+            <li class="nav-item"><a class="nav-link nav-link-arrow" href="checkin-終版-F-複製-test.html">簽到入場</a></li>
             <li class="nav-item"><a class="nav-link" href="honors.html">優良暨傑出教師芳名錄</a></li>
             <li class="nav-item"><a class="nav-link" href="https://forms.gle/DBdC3ZScynWDzEps5" target="_blank">滿意度回饋</a></li>
         </ul>
@@ -158,30 +152,27 @@ body {
         </span>
         活動資訊一覽
     </h3>
-
     <div class="row">
         <div class="col-md-6 mb-3">
-            <section class="card-custom">
+            <div class="card-custom">
                 <ul class="list-group list-group-flush">
                     <li class="list-group-item"><strong>日期：</strong> 114年11月28日 (五)</li>
                     <li class="list-group-item"><strong>時間：</strong> 18:30 (18:00 開始報到)</li>
                     <li class="list-group-item"><strong>地點：</strong> 東東宴會式場-華平囍嫁館</li>
-                    <li class="list-group-item"><strong>廳別：</strong>
-                        <span style="color:#0077FF; font-weight:700;">2F東嬿廳</span>
-                    </li>
+                    <li class="list-group-item"><strong>廳別：</strong><span style="color:#0077FF; font-weight:700;">2F東嬿廳</span></li>
                 </ul>
-            </section>
+            </div>
         </div>
 
         <div class="col-md-6 mb-3">
-            <section class="card-custom">
+            <div class="card-custom">
                 <ul class="list-group list-group-flush">
                     <li class="list-group-item"><strong>聯絡窗口：</strong> 余守純小姐 / 謝佾樺小姐</li>
                     <li class="list-group-item"><strong>聯絡分機：</strong> 32985 / 32987</li>
                     <li class="list-group-item"><strong>主辦單位：</strong> 佳里奇美醫院教學研究組</li>
                     <li class="list-group-item"><strong>協辦單位：</strong> 台南市醫師公會</li>
                 </ul>
-            </section>
+            </div>
         </div>
     </div>
 </section>
@@ -189,7 +180,7 @@ body {
 <!-- 交通與導航 -->
 <section class="mb-5">
     <h3 class="section-title mb-3">📍 交通與導航</h3>
-    <section class="card-custom">
+    <div class="card-custom">
         <ul class="list-group list-group-flush">
             <li class="list-group-item"><strong>地點：</strong> 東東宴會式場-華平囍嫁館（台南市安平區華平路156號）</li>
             <li class="list-group-item">
@@ -197,7 +188,7 @@ body {
             </li>
             <li class="list-group-item">提醒：會場提供停車位，請依照現場指引停放車輛。</li>
         </ul>
-    </section>
+    </div>
 </section>
 
 </main>
@@ -229,14 +220,14 @@ animateBubbles();
 window.addEventListener('resize',()=>{width=window.innerWidth;height=window.innerHeight;});
 </script>
 
-<!-- 卡片淡入（頁面載入後依序呈現） -->
+<!-- 卡片淡入 -->
 <script>
 const cards = document.querySelectorAll('.card-custom');
 window.addEventListener('load', () => {
     cards.forEach((card, index) => {
         setTimeout(() => {
             card.classList.add('visible');
-        }, index * 200); // 每個卡片延遲 200ms
+        }, index * 200);
     });
 });
 </script>
@@ -254,8 +245,3 @@ navLinks.forEach(link=>{
 
 </body>
 </html>
-
-
-
-
-
