--- a/honors.html
+++ b/honors.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="zh-Hant">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>114年度教學優良/傑出教師芳名錄 | 佳里奇美醫院114年度餐敘</title>
 
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -26,139 +26,39 @@ body {
     display: flex;
     align-items: center;
 }
-
-.navbar-brand {
-    color: #FFFFFF !important;
-    font-weight: 700;
-    display: flex;
-    align-items: center;
-}
-
-.navbar-brand img {
-    height: 34px;
-    margin-right: 8px;
-}
-
-/* 確保分頁靠右 */
-.navbar-collapse {
-    justify-content: flex-end !important;
-    background-color: #4B0082; /* 下拉選單背景 */
-}
-
-.navbar-nav .nav-link {
-    color: #FFFFFF !important;
-    font-weight: 600;
-    padding-left: 14px !important;
-    padding-right: 14px !important;
-    display: flex;
-    align-items: center;
-    height: 100%;
-}
-
-.navbar-nav .nav-link:hover {
-    color: #FFD700 !important;
-}
-
-.navbar-nav .nav-link.active {
-    color: #FFD700 !important;
-    font-weight: 700;
-}
+.navbar-brand { color: #fff !important; font-weight: 700; display:flex; align-items:center; }
+.navbar-brand img { height: 34px; margin-right: 8px; }
+.navbar-collapse { justify-content: flex-end !important; background-color: #4B0082; }
+.navbar-nav .nav-link { color: #fff !important; font-weight:600; padding-left:14px;padding-right:14px; display:flex;align-items:center; }
+.navbar-nav .nav-link:hover { color: #FFD700 !important; }
+.navbar-nav .nav-link.active { color:#FFD700 !important; font-weight:700; }
 
 /* 背景光暈 */
 .glow-bg {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: radial-gradient(circle at 30% 30%, rgba(255, 255, 255, 0.8), rgba(200, 255, 230, 0.3), transparent),
-                radial-gradient(circle at 70% 70%, rgba(200, 255, 230, 0.7), rgba(150, 230, 200, 0.2), transparent);
-    filter: blur(60px);
-    animation: moveGlow 12s infinite alternate ease-in-out;
-    z-index: -1;
-}
-@keyframes moveGlow {
-    0% { transform: translate(0, 0); }
-    100% { transform: translate(50px, -40px); }
+    position: fixed; top:0; left:0; width:100%; height:100%;
+    background: radial-gradient(circle at 30% 30%, rgba(255,255,255,0.8), rgba(200,255,230,0.3), transparent),
+                radial-gradient(circle at 70% 70%, rgba(200,255,230,0.7), rgba(150,230,200,0.2), transparent);
+    filter: blur(60px); z-index:-1;
 }
 
-header {
-    text-align: center;
-    padding: 90px 20px 30px;
-}
+header { text-align:center; padding:90px 20px 30px; }
+h1 { font-size:28px; color:#055a47; font-weight:700; letter-spacing:1px; }
 
-h1 {
-    font-size: 28px;
-    color: #055a47;
-    font-weight: 700;
-    letter-spacing: 1px;
-}
-
-.container {
-    max-width: 1100px;
-    margin: auto;
-    padding: 20px;
-}
-
-.card {
-    background: rgba(255, 255, 255, 0.8);
-    border-radius: 14px;
-    padding: 20px;
-    margin-bottom: 30px;
-    box-shadow: 0 4px 18px rgba(0, 0, 0, 0.08);
-    backdrop-filter: blur(10px);
-}
-
-.card h2 {
-    margin-top: 0;
-    font-size: 22px;
-    color: #0d7058;
-}
+.container { max-width:1100px; margin:auto; padding:20px; }
+.card { background: rgba(255,255,255,0.8); border-radius:14px; padding:20px; margin-bottom:30px; box-shadow:0 4px 18px rgba(0,0,0,0.08); backdrop-filter:blur(10px); }
+.card h2 { margin-top:0; font-size:22px; color:#0d7058; }
 
 /* PDF 容器 */
-.pdf-container {
-    width: 100%;
-    border-radius: 12px;
-    overflow: hidden;
-    background: #fff;
-    position: relative;
-    margin-bottom: 8px;
-}
-
-/* iframe 高度控制 */
-.pdf-container iframe {
-    width: 100%;
-    height: 820px;
-    border: none;
-}
+.pdf-container { width:100%; position:relative; margin-bottom:8px; }
+.pdf-canvas { width:100%; display:block; margin-bottom:8px; }
 
 /* 下載按鈕 */
-.download-btn {
-    display: inline-block;
-    margin-bottom: 8px;
-    padding: 6px 14px;
-    background-color: #4B0082;
-    color: #fff;
-    border-radius: 6px;
-    text-decoration: none;
-    font-weight: 600;
-}
-.download-btn:hover {
-    background-color: #5c0099;
-    color: #FFD700;
-}
-
-/* 手機版自動縮放 */
-@media (max-width: 768px) {
-    .pdf-container {
-        height: calc(100vh - 220px);
-    }
-    .pdf-container iframe {
-        height: 100%;
-    }
-    h1 { font-size: 22px; }
-}
+.download-btn { display:inline-block; margin-bottom:8px; padding:6px 14px; background-color:#4B0082; color:#fff; border-radius:6px; text-decoration:none; font-weight:600; }
+.download-btn:hover { background-color:#5c0099; color:#FFD700; }
 </style>
+
+<!-- PDF.js -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.9.179/pdf.min.js"></script>
 </head>
 
 <body>
@@ -188,27 +88,49 @@ h1 {
 </nav>
 
 <header>
-    
+    <h1>教學優良 / 傑出教師 芳名錄</h1>
 </header>
 
 <div class="container">
     <div class="card">
-       <h2>🏅 傑出教師</h2>
-        <a href="114excellent.pdf" download class="download-btn">⬇ 下載 PDF</a>
-        <div class="pdf-container">
-            <iframe src="114excellent.pdf"></iframe>
-        </div>
+        <h2>📘 優良教師</h2>
+        <a href="114good.pdf" download class="download-btn">→ 這裡看</a>
+        <div class="pdf-container" id="goodPdf"></div>
     </div>
 
     <div class="card">
-        <h2>📘 優良教師</h2>
-        <a href="114good.pdf" download class="download-btn">⬇ 下載 PDF</a>
-        <div class="pdf-container">
-            <iframe src="114good.pdf"></iframe>
-        </div>
+        <h2>🏅 傑出教師</h2>
+        <a href="114excellent.pdf" download class="download-btn">→ 這裡看</a>
+        <div class="pdf-container" id="excellentPdf"></div>
     </div>
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+
+<script>
+function renderPDF(url, containerId) {
+    const container = document.getElementById(containerId);
+    pdfjsLib.GlobalWorkerOptions.workerSrc = 'https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.9.179/pdf.worker.min.js';
+    pdfjsLib.getDocument(url).promise.then(pdf => {
+        for(let i=1; i<=pdf.numPages; i++){
+            pdf.getPage(i).then(page=>{
+                const viewport = page.getViewport({scale:1.5});
+                const canvas = document.createElement('canvas');
+                canvas.className = 'pdf-canvas';
+                const context = canvas.getContext('2d');
+                canvas.height = viewport.height;
+                canvas.width = viewport.width;
+                container.appendChild(canvas);
+                page.render({canvasContext:context, viewport:viewport});
+            });
+        }
+    });
+}
+
+// 渲染兩份 PDF
+renderPDF('114good.pdf','goodPdf');
+renderPDF('114excellent.pdf','excellentPdf');
+</script>
+
 </body>
 </html>
