--- a/honors.html
+++ b/honors.html
@@ -94,13 +94,13 @@ h1 { font-size:28px; color:#055a47; font-weight:700; letter-spacing:1px; }
 <div class="container">
     <div class="card">
         <h2>📘 優良教師</h2>
-        <a href="114good.pdf" download class="download-btn">→ 這裡看</a>
+        <a href="114good.pdf" download class="download-btn">→ 這裡看PDF</a>
         <div class="pdf-container" id="goodPdf"></div>
     </div>
 
     <div class="card">
         <h2>🏅 傑出教師</h2>
-        <a href="114excellent.pdf" download class="download-btn">→ 這裡看</a>
+        <a href="114excellent.pdf" download class="download-btn">→ 這裡看PDF</a>
         <div class="pdf-container" id="excellentPdf"></div>
     </div>
 </div>
@@ -134,3 +134,4 @@ renderPDF('114excellent.pdf','excellentPdf');
 
 </body>
 </html>
+
