--- a/honors.html
+++ b/honors.html
@@ -95,13 +95,13 @@ h1 { font-size:28px; color:#055a47; font-weight:700; letter-spacing:1px; }
 <div class="container">
     <div class="card">
         <h2>🏅 傑出教師</h2>
-        <a href="114excellent.pdf" download class="download-btn">⬇ 下載 PDF</a>
+        <a href="114excellent.pdf" download class="download-btn">→ 這裡看PDF</a>
         <div class="pdf-container" id="excellentPdf"></div>
     </div>
 
     <div class="card">
          <h2>📘 優良教師</h2>
-        <a href="114good.pdf" download class="download-btn">⬇ 下載 PDF</a>
+        <a href="114good.pdf" download class="download-btn">→ 這裡看PDF</a>
         <div class="pdf-container" id="goodPdf"></div>
     </div>
 </div>
@@ -135,5 +135,6 @@ renderPDF('114good.pdf','goodPdf');
 
 </body>
 </html>
+
 
 
