--- a/agenda.html
+++ b/agenda.html
@@ -185,7 +185,7 @@ h1 { font-size:28px; color:#4B0082; font-weight:700; letter-spacing:1px; }
     <div class="timeline-item">
         <div class="card-timeline">
             <h5>19:10 ~ 19:30</h5>
-            <p><strong>114年度優良教師頒獎：主治醫師組/護理人員組/醫事人員組/傑出教師頒獎</strong></p>
+            <p><strong>114年度優良教師頒獎：<br>主治醫師組/護理人員組/醫事人員組/傑出教師</strong></p>
             <p>王哲川醫療暨教學副院長/醫師公會代表/邵詩媛副院長/田宇峯院長</p>
             <p>主持人：林思維主任/陳郁麗主任</p>
         </div>
@@ -225,3 +225,4 @@ items.forEach(item => observer.observe(item));
 </script>
 </body>
 </html>
+
