--- a/checkin-終版-F-複製-test.html
+++ b/checkin-終版-F-複製-test.html
@@ -87,10 +87,10 @@ footer { text-align:center; color:#555; background: rgba(255,255,255,0.1); paddi
 /* ====== 翻牌倒數 CSS ====== */
 #overlay {
   position: fixed;
-  top: 0;
+  top: 70px;           /* 這裡改掉 0 */
   left: 0;
   width: 100%;
-  height: 100%;
+  height: calc(100% - 70px); /* 減掉 navbar 高度 */
   backdrop-filter: blur(15px) brightness(0.6);
   background: rgba(255, 255, 255, 0.1);
   display: none;
@@ -424,8 +424,25 @@ setInterval(updateCountdown, 1000);
 // 頁面初始
 updateCountdown();
 
+// 動態抓 navbar 高度並調整 overlay
+function adjustOverlay() {
+  const navbar = document.querySelector('.navbar');
+  const overlay = document.getElementById('overlay');
+  if(navbar && overlay){
+    const navHeight = navbar.offsetHeight; // 取得 navbar 高度
+    overlay.style.top = navHeight + 'px';
+    overlay.style.height = `calc(100% - ${navHeight}px)`;
+  }
+}
+
+// 載入完成時調整
+window.addEventListener('load', adjustOverlay);
+window.addEventListener('resize', adjustOverlay); // 窗口縮放也更新
+
+
 </script>
 
 </body>
 </html>
+
 
