--- a/checkin-終版-F-複製-test.html
+++ b/checkin-終版-F-複製-test.html
@@ -87,25 +87,25 @@ footer { text-align:center; color:#555; background: rgba(255,255,255,0.1); paddi
 /* ====== 翻牌倒數 CSS ====== */
 #overlay {
   position: fixed;
-  top: 70px;           /* 這裡改掉 0 */
+  top: 0;       /* 從螢幕最上方開始 */
   left: 0;
   width: 100%;
-  height: calc(100% - 70px); /* 減掉 navbar 高度 */
+  height: 100%; /* 覆蓋整個螢幕 */
   backdrop-filter: blur(15px) brightness(0.6);
-  background: rgba(255, 255, 255, 0.1);
+  background: rgba(0,0,0,0.4);
   display: none;
   justify-content: center;
   align-items: center;
-  z-index: 2000;
+  z-index: 9999; /* 確保比任何 card 或 navbar 高 */
   flex-direction: column;
   color: #fff;
-  text-align:center;
+  text-align: center;
 }
 
 /* 手機版下拉選單不被 overlay 遮住 */
 @media (max-width: 768px) {
   #overlay {
-    z-index: 1040; /* 比 Bootstrap navbar 下拉選單還低即可 */
+    z-index: 1020; /* 比 collapse menu 低，menu 可以浮在 overlay 上 */
   }
 }
 
@@ -137,17 +137,6 @@ footer { text-align:center; color:#555; background: rgba(255,255,255,0.1); paddi
 </style>
 </head>
 <body>
-
-<!-- ====== 彈窗翻牌倒數 ====== -->
-<div id="overlay">
-  <h2 style="font-size:2rem;font-weight:700;">🚫 主治醫師暨臨床教師餐敘尚未開放報到</h2>
-  <p>報到將於 <b>11 月 28 日 18:00</b> 開始</p>
-  <div class="flip-clock">
-    <div class="flip-unit"><div class="number" id="flip-h">00</div><div class="label">時</div></div>
-    <div class="flip-unit"><div class="number" id="flip-m">00</div><div class="label">分</div></div>
-    <div class="flip-unit"><div class="number" id="flip-s">00</div><div class="label">秒</div></div>
-  </div>
-</div>
 
 <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
   <div class="container">
@@ -249,7 +238,16 @@ footer { text-align:center; color:#555; background: rgba(255,255,255,0.1); paddi
 <footer>
 © 2025 佳里奇美醫院．教學研究組 | Designed for 114年度餐敘
 </footer>
-
+<!-- ====== 彈窗翻牌倒數 ====== -->
+<div id="overlay">
+  <h2 style="font-size:2rem;font-weight:700;">🚫 主治醫師暨臨床教師餐敘尚未開放報到</h2>
+  <p>報到將於 <b>11 月 28 日 18:00</b> 開始</p>
+  <div class="flip-clock">
+    <div class="flip-unit"><div class="number" id="flip-h">00</div><div class="label">時</div></div>
+    <div class="flip-unit"><div class="number" id="flip-m">00</div><div class="label">分</div></div>
+    <div class="flip-unit"><div class="number" id="flip-s">00</div><div class="label">秒</div></div>
+  </div>
+</div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
 <script>
@@ -437,15 +435,13 @@ function adjustOverlay() {
   const navbar = document.querySelector('.navbar');
   const overlay = document.getElementById('overlay');
   if(navbar && overlay){
-    const navHeight = navbar.offsetHeight; // 取得 navbar 高度
+    const navHeight = navbar.offsetHeight;
     overlay.style.top = navHeight + 'px';
     overlay.style.height = `calc(100% - ${navHeight}px)`;
   }
 }
-
-// 載入完成時調整
 window.addEventListener('load', adjustOverlay);
-window.addEventListener('resize', adjustOverlay); // 窗口縮放也更新
+window.addEventListener('resize', adjustOverlay);
 
 
 </script>
