--- a/honors.html
+++ b/honors.html
@@ -88,7 +88,9 @@ h1 { font-size:28px; color:#055a47; font-weight:700; letter-spacing:1px; }
 </nav>
 
 <header>
-    
+     <span style="color:#0d7058; font-weight:700; font-size:22px;">
+        新進醫師 | 年度傑出教師 | 年度優良教師介紹
+    </span>
 </header>
 
 <div class="container">
@@ -141,6 +143,7 @@ renderPDF('114good.pdf','goodPdf');
 
 </body>
 </html>
+
 
 
 
